--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,10 +13,25 @@
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-item>
-      <ion-label>Nombre</ion-label>
-      <ion-label>Edad</ion-label>
-    </ion-item>
-  </ion-list>
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col size-lg="4" size-md="6" size-xs="12" *ngFor="let noticia of noticias" class="colum1">
+        <h2>
+          {{noticia.titulo}}
+        </h2>
+        <ion-row>
+          <ion-col size-lg="6" size-md="6" size-xs="12">
+            <ion-text>
+              {{noticia.descripcion}}
+            </ion-text>
+          </ion-col>
+          <ion-col size-lg="6" size-md="6" size-xs="12">
+            <div class="imagenDiv">
+              <img [src]=noticia.imagen class="imagen">
+            </div>
+          </ion-col>
+        </ion-row>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
