--- a/src/app/news-card/news-card.component.html
+++ b/src/app/news-card/news-card.component.html
@@ -4,7 +4,7 @@
   </ion-card-header>
   <ion-card-content>
     <ion-row>
-      <ion-col size="3">
+      <ion-col>
         <p>{{descripcion}}</p>
       </ion-col>
       <ion-col>
